--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Web related
+/build/web/
+!/build/web/canvaskit/
+
+# Include fonts
+!assets/fonts/
