--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,11 +16,15 @@
         </intent>
     </queries>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+
     <application
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:label="mountain_other">
-        <receiver
+        <!-- <receiver
             android:name=".AppHomeWidget"
             android:exported="false">
             <intent-filter>
@@ -31,6 +35,18 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_home_widget_info" />
                 
+        </receiver> -->
+
+        <receiver
+            android:name=".DictionaryWidgetProvider"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_home_widget_info" />
         </receiver>
 
         <activity
